fix(variables): add overflow hidden to blured-overlay for improved layout

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -23,6 +23,7 @@ $gallery-gap: 1vw;
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 
 %text-primary {
